fix width on mobile mode

--- a/sass/components/_chart-controls.scss
+++ b/sass/components/_chart-controls.scss
@@ -89,6 +89,7 @@
         }
         .ciq-menu {
             padding: 0em;
+            width: auto;
             .cq-menu-btn{
                 > .ic-icon{
                     padding: .35em 0em;
